_sass/_ed.scss
/* Ed: the minimal edition theme.
 * ___________________
 * \_   _____/\______ \
 *  |    __)_  |    |  \
 *  |        \ |    `   \
 * /_______  //_______  /
 *         \/         \/
 * Designed, built, and released under an MIT license by @elotroalex and brill friends. See credits
 * for more info.
 * Based on the Poole and Lanyon theme by @mdo. Learn more at
 * https://github.com/minicomp/ed.
*/

/*
  To apply a different color scheme to the whole scroll down to the themes section instructions at
  the very bottom of this file
*/


/*
  General

  Update the foundational and global aspects of the page.
*/

* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.content {
  flex-grow: 1;
}

html {
  //font-family: $main-font;
  font-family: "Lato";
  //font-family: "Iowan Old Style", "Palatino", "Georgia", "Times New Roman", "Times", "serif";
  // font-size: 1em; /* 16px; specify in ems to support text resizing in all browsers */
  font-size: 13pt;
  line-height: 2;
}

@media (min-width: 38em) {
  html {
    font-size: $regular-font-size;
  }
}

body {
  color: $text-color;
  background-color: #fff;
  //background-color: rgb(243, 242, 242);
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
}


.content {
  margin-bottom: 4rem;
}


/*
  Wrapper

  The wrapper is used to position site content when the sidebar is toggled. We use an outter wrap to
  position the sidebar without interferring with the regular page content.
*/

.wrap {
  position: relative;
  width: 100%;
}


/*
  Container

  Center the page content.
*/

// .container {
//   padding-left: 1rem;
//   padding-right: 1rem;
//   margin-left: auto;
//   margin-right: auto;
//   width: 60em;
//   max-width: 95%;
// }

.middle-container {
  padding-left: 1rem;
  padding-right: 1rem;
  margin-left: auto;
  margin-right: auto;
  width: 60em;
  max-width: 95%;
}

// @media (min-width: 56em) {
//   .container {
//     max-width: 80rem;
//     // max-width: 41rem;
//     //text-align: justify;
//   }
// }

/* Links */
a,
.text-title a {
  // color: $link-color;
  color: rgb(175, 100, 5);
  text-decoration: none;
}

/* `:focus` is linked to `:hover` for basic accessibility */
a:hover,
a:focus {
  text-decoration: underline;
}

/* Headings */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Lato";
  margin-bottom: .5rem;
  font-weight: normal;
  color: $heading-color;
  line-height: 1.25;
  text-rendering: optimizeLegibility;
}

h1,
h1.text-title {
  font-size: 1.4rem;
}

h2 {
  margin-top: 1rem;
  font-size: 1.2rem;
}

h3 {
  margin-top: .6rem;
  font-size: 1rem;
}

h4,
h5,
h6 {
  margin-top: .2rem;
  font-size: .8rem;
}


/* Body text */
p {
  margin-top: 0;
  margin-bottom: 1rem;
}

/* Lists */
// ul {
//   list-style: circle;
// }

@media print {
  .noprint {
    display: none;
  }
}

ul,
ol {
  margin-top: 0;
  margin-bottom: 1rem;
}

/* Horizontal ruler */
hr {
  position: relative;
  margin: 1.5rem 0;
  border: 0;
  border-top: 1px solid #eee;
  border-bottom: 1px solid #fff;
}

/* Search highlighting */
mark {
  color: white;
  background-color: $link-color;
}

/* Quotes */

@media (min-width: 30em) {
  blockquote {
    padding-right: 5rem;
    padding-left: 1.25rem;
  }
}

/* Images */
img {
  display: block;
  max-width: 100%;
  //margin: 0 0 1rem;
}

/* Header image */
#headerim {
  width: 35%;
  height: auto;
  float: left;
  margin-left: 2%;
  margin-right: 4%;
  // margin-bottom: 2%;
  margin-top: 4%;
  margin-bottom: 0;

  @media (max-width: 750px) {
    width: 60%;
    display: block;
    float: none;
    margin-left: auto;
    margin-right: auto;
    margin-top: 7%;
  }
}

#index-intro-text {
  height: auto;
  float: none;
  width: 98%;
  padding-top: 4%;
  display: block;

  @media (max-width: 750px) {
    display: grid;
    float: none;
    margin-left: auto;
    margin-right: auto;
    padding-top: 2%;
  }
}

#index-main-text {
  display: grid;
}

#caption {
  font-size: 10pt;
  text-align: center;
  margin-bottom: 30px;
}

/* Tables */
table {
  margin-bottom: 1rem;
  width: 100%;
  border: 1px solid #e5e5e5;
  border-collapse: collapse;
}

td,
th {
  padding: .25rem .5rem;
  border: 1px solid #e5e5e5;
}

tbody tr:nth-child(odd) td,
tbody tr:nth-child(odd) th {
  background-color: #f9f9f9;
}


/*
  Masthead

  Super small header above the content for site name and short description.
*/

.spacer {
  height: 4rem;
}

.masthead {
  position: fixed;
  border-bottom: 1px solid #eee;
  // padding-top: 26px;
  padding-bottom: 1rem;
  top: 0;
  width: 100%;
  height: 3.5rem;
  background-color: #ffffff;
  z-index: 9999999;
  opacity: 1;
  padding-top: .5rem;


  #name {
    color: rgb(0, 0, 0);
    font-weight: 900;
    font-size: 1.5rem;

    -webkit-transition: opacity .1s;
    transition: opacity .1s;

    // don't underline the name on hover
    &:hover {
      text-decoration: none;
      opacity: 0.8;
    }
  }

  .span {
    float: right;
    text-align: right;
    padding-top: 0.4rem;
    padding-right: 0.4rem;

    a {
      padding-left: 1rem;
      color: gray;

      -webkit-transition: opacity .1s;
      transition: opacity .1s;

      // don't underline the name on hover
      &:hover {
        text-decoration: none;
        opacity: 0.8;
      }
    }
  }
}

@media (max-width: 750px) {
  #normal-top-links {
    display: none;
  }
}

@media (min-width: 750px) {
  #responsive-top-links {
    display: none;
  }
}

.hamburger {
  float: right;
  cursor: pointer;

  -webkit-transition: opacity .1s;
  transition: opacity .1s;

  // don't underline the name on hover
  .bar1 .bar2 .bar3 &:hover {
    text-decoration: none;
    opacity: 0.8;
  }

  ul {
    display: none;
  }
}

.bar1,
.bar2,
.bar3 {
  width: 20px;
  height: 3px;
  background-color: gray;
  margin-bottom: 4px;
  margin-top: 5px;
  transition: 0.4s;
}

/* Rotate first bar */
.change .bar1 {
  transform: translate(0, 8px) rotate(-45deg);
}

/* Fade out the second bar */
.change .bar2 {
  opacity: 0;
}

/* Rotate last bar */
.change .bar3 {
  transform: translate(0, -8px) rotate(45deg);
}

.change ul {
  display: block;
  position: absolute;
  top: 3.5rem;
  right: 0;
  width: 100%;
  background-color: #ffffff;
  border-bottom: 1px solid #eee;
  z-index: 9999999;
  padding: 0;
  margin: 0;
  list-style-type: none;
  cursor: pointer;
}

.change ul li {
  padding: 0.5rem;
  border-bottom: 1px solid #eee;
  // center this
  text-align: center;
}

.hamburger ul li a {
  display: block;
  width: 100%;
  height: 100%;
  text-decoration: none;
  color: inherit;
}

#bimg {
  position: relative;
  z-index: 1;
}

@media (max-width: 361px) {
  .masthead {
    padding-bottom: 4rem;

    #name {
      padding-right: 10px;
    }

    a {
      float: left;
      padding-left: 0px;
      padding-right: 0px;
    }

    .span {
      display: block;
      float: left;
      margin-left: -9px;
      // a {
      //   padding-left: 0px;
      //   padding-right: 5px;
      // }
    }
  }
}



/*
 ED special layouts
*/

p.centered {
  text-align: center;
}

p.larger {
  font-size: 1.6rem;
}

p.large {
  font-size: 1.4rem
}

p.small {
  font-size: 0.8rem;
}

div.poem,
.poem,
div.narrative,
.narrative {
  margin-bottom: 5rem;
}

div.toc {
  margin-bottom: 4rem;
}


/* Footnotes styles */
sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sup {
  top: -0.5em;
}

.footnotes {
  line-height: 1.2rem;
  font-size: 0.9rem;
  letter-spacing: .01rem;
}

.footnotes .foot-block {
  display: inline-block;
  padding: 0 4rem 0 2rem;
  margin-bottom: .8rem;
  font-style: italic;
}

a.footnote {
  padding-left: .1rem;
  font-size: .66rem;
}

/*Bibliography styles */
ol.bibliography {
  list-style-type: none;
  padding-left: 1rem;
  text-indent: -1rem;
}

/* Diplomatic editions */
ins,
.add {
  color: #288828;
  font-style: italic;
}

del,
.delete {
  text-decoration: line-through;
  //color: #AA3232;
}

u,
.underline {
  text-decoration: underline;
}

